# ansible-my-wsl

./: .editorconfig  .gitattributes  .gitignore  .ruff.toml  Dockerfile.dev  README.md  Taskfile.yml  pyproject.toml  pytest.ini  requirements.yml
molecule/default/: converge.yml  molecule.yml  prepare.yml
molecule/default/tests/: test_default.py
molecule/main-vm/: converge.yml  molecule.yml  prepare.yml
molecule/main-vm/group_vars/: wsl2.yml
molecule/main-vm/tests/: test_default.py
playbooks/: main.yml  wsl1.yml  wsl2.yml
playbooks/group_vars/: all.yml  wsl1.yml  wsl2.yml
roles/bar/tasks/: main.yml
roles/bar/tests/: test.yml
roles/bar/vars/: main.yml
roles/base/: README.md
roles/base/meta/: main.yml
roles/base/tasks/: install-packages.yml  main.yml
roles/base/tests/: test.yml
roles/base/vars/: main.yml
roles/fish/: .editorconfig  .gitattributes  README.md
roles/fish/meta/: main.yml
roles/fish/tasks/: configuration.yml  main.yml
roles/fish/tests/: test.yml
roles/system/: README.md
roles/system/defaults/: main.yml
roles/system/meta/: main.yml
roles/system/tasks/: install-packages.yml  main.yml  update-repository.yml  upgrade-system.yml
roles/system/tests/: test.yml
roles/system/vars/: main.yml
roles/tmux/: .editorconfig  .gitattributes  README.md
roles/tmux/meta/: main.yml
roles/tmux/tasks/: configuration.yml  main.yml
roles/tmux/tests/: test.yml
roles/tmuxinator/: .editorconfig  .gitattributes  README.md
roles/tmuxinator/meta/: main.yml
roles/tmuxinator/tasks/: configuration.yml  main.yml
roles/tmuxinator/tests/: test.yml
roles/user/: README.md
roles/user/defaults/: main.yml
roles/user/meta/: main.yml
roles/user/tasks/: create-user.yml  main.yml
roles/user/tests/: test.yml
roles/wsl/: README.md
roles/wsl/defaults/: main.yml
roles/wsl/meta/: main.yml
roles/wsl/tasks/: configuration.yml  main.yml
roles/wsl/tests/: test.yml
scripts/: autologin.conf  docker-entrypoint.sh
tasks/: hello.yml
(+40 files in other folders)
